<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/sec1"
        />

    <LinearLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context=".MainActivity">


    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/spinnerHeight"
        android:background="@color/spinnerColor"
        android:entries="@array/teams_array"
        android:popupBackground="#60000000"
        android:textAlignment="center"
        />

        <TextView
            android:id="@+id/team_a_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="bold"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/scoreColor"
            android:textSize="@dimen/scoreSize"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/buttonMargin"
            android:background="@color/buttonColor"
            android:onClick="addSixForTeamA"
            android:text="@string/touchDownButton"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/buttonMargin"
            android:background="@color/buttonColor"
            android:onClick="addThreeForTeamA"
            android:text="@string/fieldGoalButton"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/buttonMargin"
            android:background="@color/buttonColor"
            android:onClick="addTwoForTeamA"
            android:text="@string/twoPointButton"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/buttonMargin"
            android:background="@color/buttonColor"
            android:onClick="addOneForTeamA"
            android:text="@string/onePointButton"
            />
    </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="585dp"
            android:background="#ECEFF1"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/spinnerHeight"
        android:background="@color/spinnerColor"
        android:entries="@array/teams_array"
        android:popupBackground="#60000000"
        android:textAlignment="center"
        />
            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="bold"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/scoreColor"
                android:textSize="@dimen/scoreSize"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/buttonMargin"
                android:background="@color/buttonColor"
                android:onClick="addSixForTeamB"
                android:text="@string/touchDownButton"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/buttonMargin"
                android:background="@color/buttonColor"
                android:onClick="addThreeForTeamB"
                android:text="@string/fieldGoalButton"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/buttonMargin"
                android:background="@color/buttonColor"
                android:onClick="addTwoForTeamB"
                android:text="@string/twoPointButton"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/buttonMargin"
                android:background="@color/buttonColor"
                android:onClick="addOneForTeamB"
                android:text="@string/onePointButton"
                />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:background="@color/buttonColor"
        android:onClick="resetScore"
        android:text="@string/resetButton"/>
</RelativeLayout>